t4 sucks so hard, or at least our implementation thereof

--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -23,11 +23,9 @@
 
 
 <p>&nbsp;</p>
-<div class="jumbotron">
 <h2>Guide to Telephone Services Ordering</h2>
 <p>Learn more about <a href="#kinds-of-phones">telephone hardware</a> that CWRU ITS recommends for use with our network, associated <a href="#phone-services">services, and rates</a>. This guide also outlines the <a href="#hardware-cost">cost of recommended hardware</a>.</p>
 <p>Prices subject to change at any time without notice.</p>
-</div>
 
 <h2>More help</h2>
 <p>Need more information? Scroll to the bottom of this document for common <a href="#definitions">definitions</a>. Or for personal help, contact the ITS Service Desk anytime at 216.368.<strong>HELP</strong> (4357).</p>
@@ -37,22 +35,22 @@
 <h3>Model 7942G</h3>
 <p>This phone is the standard phone for full-time faculty and staff.</p>
 <hr>
-<p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
-<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a></p>
+<!-- <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
+<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a></p> -->
 
-<p><ul>
+<ul>
   <li>Two-line set</li>
   <li>Hands free speakerphone</li>
   <li>Large LCD display</li>
   <li>Headset jack</li>
   <li>Volume control</li>
   <li>Message waiting light</li>
-</ul></p>
+</p>
 
 <h3>Model 7945G</h3>
 <hr>
-<p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
-<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb80-1.jpg"></a></p>
+<!-- <p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
+<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb80-1.jpg"></a></p> -->
 
 <ul>
   <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
@@ -63,133 +61,89 @@
 
 <h3>Model 7962G</h3>
 <hr>
-<p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.html">
-<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd41-1.jpg"></a></p>
-
-<p><ul>
+<!-- <p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.html">
+<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd41-1.jpg"></a></p>-->
+<ul>
   <li>Six-line set</li>
   <li>Hands free speakerphone</li>
   <li>Large LCD display</li>
   <li>Headset jack</li>
   <li>Volume control</li>
   <li>Message waiting light</li>
-</ul></p>
+</ul>
 
 <h3>Model 7965G</h3>
 <hr>
-<div class="row">
-  <div class="col-md-2" "col-sm-12">
-    <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.html">
-    <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd58-1.jpg"></a>
-  </div>
-  <div class="col-md-10" "col-sm-10" "pull-right">
-    <ul>
-      <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
-      <li>Large backlit color display for easy use of Cisco Unified Communications and third-party telephone applications</li>
-      <li>Improved navigation cluster for easier navigation and feature and function selection</li>
-      <li>Gigabit Ethernet connectivity</li>
-    </ul>
-  </div>
-</div>
+<!-- <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.html">
+<img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd58-1.jpg"></a> -->
+<ul>
+  <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
+  <li>Large backlit color display for easy use of Cisco Unified Communications and third-party telephone applications</li>
+  <li>Improved navigation cluster for easier navigation and feature and function selection</li>
+  <li>Gigabit Ethernet connectivity</li>
+</ul>
 
 <h3>Cisco Unified IP Conference Phone 8831</h3>
 <hr>
-<div class="row">
-  <div class="col-md-2" "col-sm-2">
-    <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-8800-series/data_sheet_c78-726887.html">
-    <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-8800-series/data_sheet_c78-726887.doc/_jcr_content/renditions/data_sheet_c78-726887_0.jpg"></a>
-  </div>
-  <div class="col-md-10" "col-sm-10" "pull-right">
-    <ul>
-      <li>Hands free speakerphone</li>
-      <li>Full duplex</li>
-      <li>Suitable for small to medium sized conference rooms</li>
-      <li>Larger conference rooms may require daisy-chaining of base units (up to two maximum)</li>
-      <li>Ethernet 10/100</li>
-      <li>SIP</li>
-      <li>Supports 2 External Wired or Wireless Microphones</li>
-      <li>1 Year Warranty</li>
-    </ul>
-  </div>
-</div>
+<!-- <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-8800-series/data_sheet_c78-726887.html">
+<img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-8800-series/data_sheet_c78-726887.doc/_jcr_content/renditions/data_sheet_c78-726887_0.jpg"></a> -->
+<ul>
+  <li>Hands free speakerphone</li>
+  <li>Full duplex</li>
+  <li>Suitable for small to medium sized conference rooms</li>
+  <li>Larger conference rooms may require daisy-chaining of base units (up to two maximum)</li>
+  <li>Ethernet 10/100</li>
+  <li>SIP</li>
+  <li>Supports 2 External Wired or Wireless Microphones</li>
+  <li>1 Year Warranty</li>
+</ul>
 
 <h3>Handset Cord</h3>
 <hr>
-<div class="row">
-  <div class="col-md-2" "col-sm-2">
-    <img class="pull-left img-responsive" class="media-object" src="/images/tso/handset_cord.png">
-  </div>
-  <div class="col-md-10" "col-sm-10" "pull-right">
-    <ul>
-      <li>2 FT Coiled 12 Ft Uncoiled</li>
-      <li>RJ22</li>
-      <li>Gold Plated Contacts</li>
-      <li>PVC Jacket</li>
-      <li>UL Listed</li>
-      <li>Medium Gray</li>
-    </ul>
-  </div>
-</div>
+<!-- <img class="pull-left img-responsive" class="media-object" src="/images/tso/handset_cord.png"> -->
+<ul>
+  <li>2 FT Coiled 12 Ft Uncoiled</li>
+  <li>RJ22</li>
+  <li>Gold Plated Contacts</li>
+  <li>PVC Jacket</li>
+  <li>UL Listed</li>
+  <li>Medium Gray</li>
+</ul>
 
 <h3>Expansion Module</h3>
 <hr>
-<div class="row">
-  <div class="col-md-2" "col-sm-2">
-    <img class="pull-left img-responsive" class="media-object" src="/images/tso/7914_expansion.png">
-  </div>
-  <div class="col-md-10" "col-sm-10" "pull-right">
-    <ul>
-      <li>Adds fourteen buttons for either additional lines or speed dial numbers</li>
-      <li>Includes new base and power cord</li>
-      <li>Up to two expansion modules can be added</li>
-      <li>Must be ordered from the vendor</li>
-    </ul>
-  </div>
-</div>
+<!-- <img class="pull-left img-responsive" class="media-object" src="/images/tso/7914_expansion.png"> -->
+<ul>
+  <li>Adds fourteen buttons for either additional lines or speed dial numbers</li>
+  <li>Includes new base and power cord</li>
+  <li>Up to two expansion modules can be added</li>
+  <li>Must be ordered from the vendor</li>
+</ul>
 
 <h3>Linksys SE1500 5 Port Fast Ethernet Switch</h3>
 <hr>
-<div class="row">
-  <div class="col-md-2" "col-sm-2">
-    <img class="pull-left img-responsive" class="media-object" src="/images/tso/se1500.png">
-  </div>
-  <div class="col-md-10" "col-sm-10" "pull-right">
-    <ul>
-      <li>Linksys SE1500 10/100 5 Port Switch includes power adapter.</li>
-      <li>The SE1500 5 Port Switch is the easiest, most flexible way to boost your network's performance while migrating to the power of Fast Ethernet.</li>
-      <li>Designed to meet the needs of small businesses, medium businesses and SOHO networks.</li>
-    </ul>
-  </div>
-</div>
+<!-- <img class="pull-left img-responsive" class="media-object" src="/images/tso/se1500.png"> -->
+<ul>
+  <li>Linksys SE1500 10/100 5 Port Switch includes power adapter.</li>
+  <li>The SE1500 5 Port Switch is the easiest, most flexible way to boost your network's performance while migrating to the power of Fast Ethernet.</li>
+  <li>Designed to meet the needs of small businesses, medium businesses and SOHO networks.</li>
+</ul>
 
 <h3>Cisco Unified Wideband Handset</h3>
 <hr>
-<div class="row">
-  <div class="col-md-2" "col-sm-2">
-    <img class="pull-left img-responsive" class="media-object" src="/images/tso/handset.png">
-  </div>
-  <div class="col-md-10" "col-sm-10" "pull-right">
-    <ul>
-      <li>Enhanced audio experience makes communications more intelligible and comfortable for the user.</li>
-      <li>Sold as an accessory that can be installed on Cisco Unified IP Phone 7906G, 7911G, 7941G, 7942G, 7945G, 7941G-GE, 7961G, 7961G-GE, 7962G, 7965G, 7970G, and 7971G-GE, 7975G models.</li>
-    </ul>
-  </div>
-</div>
+<!-- <img class="pull-left img-responsive" class="media-object" src="/images/tso/handset.png"> -->
+<ul>
+  <li>Enhanced audio experience makes communications more intelligible and comfortable for the user.</li>
+  <li>Sold as an accessory that can be installed on Cisco Unified IP Phone 7906G, 7911G, 7941G, 7942G, 7945G, 7941G-GE, 7961G, 7961G-GE, 7962G, 7965G, 7970G, and 7971G-GE, 7975G models.</li>
+</ul>
 
 <h3 class="media-heading">Power Supply</h3>
 <hr>
-<div class="row">
-  <div class="col-md-2" "col-sm-2">
-    <img class="pull-left img-responsive" class="media-object" src="/images/tso/power_supply.png">
-  </div>
-  <div class="col-md-10" "col-sm-10" "pull-right">
-    <ul>
-      <li>Replacement power supply for most Cisco CP- 79XX series IP phones.</li>
-      <li>Compatible models include 7902G, 7910G+SW, CP-7940G 7905G, CP-7912G, CP-7960G 7910G, CP-7914.</li>
-    </ul> 
-  </div>
-</div>
-
+<!-- <img class="pull-left img-responsive" class="media-object" src="/images/tso/power_supply.png"> -->
+<ul>
+  <li>Replacement power supply for most Cisco CP- 79XX series IP phones.</li>
+  <li>Compatible models include 7902G, 7910G+SW, CP-7940G 7905G, CP-7912G, CP-7960G 7910G, CP-7914.</li>
+</ul> 
 
 <h2 id="phone-services">Hardware and Service Pricing, Telephone Services Rates</h2>
 <p>Prices subject to change at any time without notice.</p>
