--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -9,7 +9,7 @@
 
   <style>
   h2 { padding-top: 30px; }
-  h3 { padding-top: 20px; }
+  h4 { padding-top: 20px; }
   tr td:first-child + td { text-align:right; }
   tr th:first-child + th { text-align:right; }
   </style>
@@ -27,16 +27,16 @@
 <p>Learn more about <a href="#kinds-of-phones">telephone hardware</a> that CWRU ITS recommends for use with our network, associated <a href="#phone-services">services, and rates</a>. This guide also outlines the <a href="#hardware-cost">cost of recommended hardware</a>.</p>
 <p>Prices subject to change at any time without notice.</p>
 
-<h2>More help</h2>
+<h3>More help</h3>
 <p>Need more information? Scroll to the bottom of this document for common <a href="#definitions">definitions</a>. Or for personal help, contact the ITS Service Desk anytime at 216.368.<strong>HELP</strong> (4357).</p>
 
-<h2 id="kinds-of-phones">Telephone Hardware and Parts Descriptions</h2>
+<h3 id="kinds-of-phones">Telephone Hardware and Parts Descriptions</h3>
 
-<h3>Model 7942G</h3>
+<h4>Model 7942G</h4>
 <p>This phone is the standard phone for full-time faculty and staff.</p>
 <hr>
-<!-- <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
-<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a></p> -->
+<a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
+<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a></p>
 
 <ul>
   <li>Two-line set</li>
@@ -47,10 +47,10 @@
   <li>Message waiting light</li>
 </ul>
 
-<h3>Model 7945G</h3>
+<h4>Model 7945G</h4>
 <hr>
-<!-- <p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
-<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb80-1.jpg"></a></p> -->
+<p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
+<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb80-1.jpg"></a></p>
 
 <ul>
   <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
@@ -59,7 +59,7 @@
   <li>Gigabit Ethernet connectivity</li>
 </ul>
 
-<h3>Model 7962G</h3>
+<h4>Model 7962G</h4>
 <hr>
 <!-- <p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.html">
 <img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7962g/product_data_sheet0900aecd8069bd41.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd41-1.jpg"></a></p>-->
@@ -72,7 +72,7 @@
   <li>Message waiting light</li>
 </ul>
 
-<h3>Model 7965G</h3>
+<h4>Model 7965G</h4>
 <hr>
 <!-- <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.html">
 <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7965g/product_data_sheet0900aecd8069bd58.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bd58-1.jpg"></a> -->
@@ -83,7 +83,7 @@
   <li>Gigabit Ethernet connectivity</li>
 </ul>
 
-<h3>Cisco Unified IP Conference Phone 8831</h3>
+<h4>Cisco Unified IP Conference Phone 8831</h4>
 <hr>
 <!-- <a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-8800-series/data_sheet_c78-726887.html">
 <img class="pull-left img-responsive" class="media-object" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-8800-series/data_sheet_c78-726887.doc/_jcr_content/renditions/data_sheet_c78-726887_0.jpg"></a> -->
@@ -98,7 +98,7 @@
   <li>1 Year Warranty</li>
 </ul>
 
-<h3>Handset Cord</h3>
+<h4>Handset Cord</h4>
 <hr>
 <!-- <img class="pull-left img-responsive" class="media-object" src="/images/tso/handset_cord.png"> -->
 <ul>
@@ -110,7 +110,7 @@
   <li>Medium Gray</li>
 </ul>
 
-<h3>Expansion Module</h3>
+<h4>Expansion Module</h4>
 <hr>
 <!-- <img class="pull-left img-responsive" class="media-object" src="/images/tso/7914_expansion.png"> -->
 <ul>
@@ -120,7 +120,7 @@
   <li>Must be ordered from the vendor</li>
 </ul>
 
-<h3>Linksys SE1500 5 Port Fast Ethernet Switch</h3>
+<h4>Linksys SE1500 5 Port Fast Ethernet Switch</h4>
 <hr>
 <!-- <img class="pull-left img-responsive" class="media-object" src="/images/tso/se1500.png"> -->
 <ul>
@@ -129,7 +129,7 @@
   <li>Designed to meet the needs of small businesses, medium businesses and SOHO networks.</li>
 </ul>
 
-<h3>Cisco Unified Wideband Handset</h3>
+<h4>Cisco Unified Wideband Handset</h4>
 <hr>
 <!-- <img class="pull-left img-responsive" class="media-object" src="/images/tso/handset.png"> -->
 <ul>
@@ -137,7 +137,7 @@
   <li>Sold as an accessory that can be installed on Cisco Unified IP Phone 7906G, 7911G, 7941G, 7942G, 7945G, 7941G-GE, 7961G, 7961G-GE, 7962G, 7965G, 7970G, and 7971G-GE, 7975G models.</li>
 </ul>
 
-<h3 class="media-heading">Power Supply</h3>
+<h4 class="media-heading">Power Supply</h4>
 <hr>
 <!-- <img class="pull-left img-responsive" class="media-object" src="/images/tso/power_supply.png"> -->
 <ul>
@@ -145,7 +145,7 @@
   <li>Compatible models include 7902G, 7910G+SW, CP-7940G 7905G, CP-7912G, CP-7960G 7910G, CP-7914.</li>
 </ul> 
 
-<h2 id="phone-services">Hardware and Service Pricing, Telephone Services Rates</h2>
+<h3 id="phone-services">Hardware and Service Pricing, Telephone Services Rates</h3>
 <p>Prices subject to change at any time without notice.</p>
 
 <table  class="table table-condensed table-hover">
@@ -337,9 +337,9 @@
 </tbody>
 </table>
 
-<h2 id="definitions">Definitions</h2>
+<h3 id="definitions">Definitions</h3>
 
-<h3>Centrex Analog</h3>
+<h4>Centrex Analog</h4>
 <p>Centrex telephone lines are really just normal telephone lines which provide extended services, typically including:</p> 
 <ul>
   <li>Three-way calling for conference calls</li>
@@ -348,14 +348,14 @@
   <li>Voice mail</li>
 </ul>
 
-<h3>VoIP Analog</h3>
+<h4>VoIP Analog</h4>
 <p>Use to connect traditional analog telephones, fax machines, Talk Box, emergency telephones, elevator phones and other similar customer-premises devices to a digital telephone system or a voice over IP telephony network.</p>
 
-<h3>VoIP</h3>
+<h4>VoIP</h4>
 <p>Voice over IP (VoIP) is a methodology and group of technologies for the delivery of voice communications and multimedia sessions over Internet Protocol (IP) networks, such as the Internet. Other terms commonly associated with VoIP are IP telephony, Internet telephony, broadband telephony, and broadband phone service.</p>
 <p>VoIP is used in conjunction with Cisco Model Telephones on campus.</p>
 
-<h3>Where is my MAC Address located?</h3>
+<h4>Where is my MAC Address located?</h4>
 <p>The MAC Address can be located on the bottom of your Cisco Phone. The MAC Address sticker will be designated by the work MAC in a raised format next to the correct sticker. The MAC address is always a 12 digit sequence.</p>
 
 <hr>
