--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -35,9 +35,10 @@
 <h4>Model 7942G</h4>
 <p>This phone is the standard phone for full-time faculty and staff.</p>
 <hr>
-<a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
-<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a></p>
+<p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.html">
+<img class="img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7942g/product_data_sheet0900aecd8069bb68.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb68-1.jpg"></a></p>
 
+<p>
 <ul>
   <li>Two-line set</li>
   <li>Hands free speakerphone</li>
@@ -46,18 +47,21 @@
   <li>Volume control</li>
   <li>Message waiting light</li>
 </ul>
+</p>
 
 <h4>Model 7945G</h4>
 <hr>
 <p><a href="http://www.cisco.com/c/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.html">
-<img class="pull-left img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb80-1.jpg"></a></p>
+<img class="img-responsive" src="http://www.cisco.com/c/dam/en/us/products/collateral/collaboration-endpoints/unified-ip-phone-7945g/product_data_sheet0900aecd8069bb80.doc/_jcr_content/renditions/product_data_sheet0900aecd8069bb80-1.jpg"></a></p>
 
+<p>
 <ul>
   <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
   <li>Large backlit color display for easy use of Cisco Unified Communications and third- party telephone applications</li>
   <li>Improved navigation cluster for easier navigation and feature and function selection</li>
   <li>Gigabit Ethernet connectivity</li>
 </ul>
+</p>
 
 <h4>Model 7962G</h4>
 <hr>
