some uc stuff that should be happening in development first

--- a/guides/webex-jabber/jabber-qrg-mac.html
+++ b/guides/webex-jabber/jabber-qrg-mac.html
@@ -238,7 +238,7 @@ h3 { padding-top: 20px; }
 
 
 
-<h2>Meetings</h2>
+<!-- <h2>Meetings</h2>
 
 <h3>Add Meeting Accounts</h3>
 
@@ -278,7 +278,7 @@ h3 { padding-top: 20px; }
 
 <h4>Create Conference Call Using My Bridge</h4>
 
-<p>In the group chat window, select the call icon to start a conference call. You are connected into your bridge and your participants are sent an invitation to join your conference call.</p>
+<p>In the group chat window, select the call icon to start a conference call. You are connected into your bridge and your participants are sent an invitation to join your conference call.</p> -->
 
 <!-- <h2>Accessibility</h2>
 
