qrg for jabber mac

--- a/guides/webex-jabber/jabber-qrg-mac.html
+++ b/guides/webex-jabber/jabber-qrg-mac.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cisco WebEx - Meeting Center Quick Reference Guide</title>
+ <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <title>Cisco WebEx - Meeting Center Quick Reference Guide</title>
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 
@@ -13,37 +13,37 @@ h2 { padding-top: 30px; }
 h3 { padding-top: 20px; }
 
 .copy-left {
-   display: inline-block;
-   text-align: right;
-   margin: 0;
-  -moz-transform: scaleX(-1);
-  -o-transform: scaleX(-1);
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-  filter: FlipH;
-  -ms-filter: "FlipH";
+  display: inline-block;
+  text-align: right;
+  margin: 0;
+ -moz-transform: scaleX(-1);
+ -o-transform: scaleX(-1);
+ -webkit-transform: scaleX(-1);
+ transform: scaleX(-1);
+ filter: FlipH;
+ -ms-filter: "FlipH";
  }
 
 .dl-horizontal {
-  *zoom: 1;
+ *zoom: 1;
 }
 .dl-horizontal:before,
 .dl-horizontal:after {
-  display: table;
-  content: "";
-  line-height: 0;
+ display: table;
+ content: "";
+ line-height: 0;
 }
 .dl-horizontal:after {
-  clear: both;
+ clear: both;
 }
 .dl-horizontal dt {
-  float: left;
-  width: 160px;
-  clear: left;
-  text-align: right;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+ float: left;
+ width: 160px;
+ clear: left;
+ text-align: right;
+ overflow: hidden;
+ text-overflow: ellipsis;
+ white-space: nowrap;
 }
 
 </style>
@@ -63,8 +63,8 @@ h3 { padding-top: 20px; }
 <p>Customize personal status messages and tell your contacts what you are doing at a glance.</p>
 
 <ol>
-	<li>Select the status message field on the main window.</li>
-	<li>Select either;
+	<li>Choose the status message field on the main window.</li>
+	<li>Choose either;
 		<ul>
 			<li>Custom Available</li>
 			<li>Custom Away</li>
@@ -83,8 +83,8 @@ h3 { padding-top: 20px; }
 <p>To dial contacts using Cisco Jabber directly from your Mac Address Book, first configure the <strong>Mac Address Book Plug-in</strong>.</p>
 
 <ol> 
-	<li>Select <strong>Jabber</strong> &gt; <strong>Install Mac Address Book Plug-in</strong>.</li>
-	<li>Select <strong>Jabber</strong> &gt; <strong>Preferences</strong> &gt; <strong>General</strong> &gt; <strong>Enable Mac Address Book integration</strong>.</li>
+	<li>Choose <strong>Jabber</strong> &gt; <strong>Install Mac Address Book Plug-in</strong>.</li>
+	<li>Choose <strong>Jabber</strong> &gt; <strong>Preferences</strong> &gt; <strong>General</strong> &gt; <strong>Enable Mac Address Book integration</strong>.</li>
 	<li>Restart the client and the change will take effect.</li>
 </ol>
 
@@ -92,38 +92,36 @@ h3 { padding-top: 20px; }
 <p>To add a directory group into your contact list:</p>
 
 <ol>
-	<li>Select <strong>Jabber</strong> &gt; Contacts &gt; New Directory Group.</li>
+	<li>Choose <strong>Jabber</strong> &gt; Contacts &gt; New Directory Group.</li>
 	<li>Enter the name of the directory group.</li>
-	<li>Select OK.</li>
+	<li>Choose <strong>OK</strong>.</li>
 </ol>
 
 <h2>Make Calls</h2>
 
 <h3>Start a Jabber to Jabber Call</h3>
 
-<p>You can make a call to another Cisco Jabber client using Jabber to Jabber calls. There are some differences using Jabber to Jabber calls: 
-	
+<p>Please note the following caveats of Jabber to Jabber calling: 
 	<ul>
-		<li>You can make a Jabber to Jabber call with only one contact at a time.</li>
-		<li>When you are on a Jabber to Jabber call, if you call another contact your ongoing call will end.</li>
-		<li>When you start a Jabber to Jabber call with a contact and your contact starts a Jabber to Jabber call with you at the same time, your call is connected and you don't get any incoming call notice.</li>
+		<li>You can make a <strong>Jabber to Jabber</strong> call with only <mark>one contact at a time</mark>.</li>
+		<li>When you are on a <strong>Jabber to Jabber</strong> call, if you call another contact <mark>your ongoing call will end</mark>.</li>
 	</ul>
+<mark>This feature must be enabled by your administrator.</mark></p>
 
-<p>This feature must be enabled by your administrator.</p>
-
+<p>To make a call to another Cisco Jabber client: 
 <ol>
-	<li>Select the call icon for your contact. For example in the contact list or in the chat window.</li>
-	<li>Select <strong>Jabber</strong> Call from the menu.</li>
-</ol>
+	<li>Choose the call icon for your contact. For example in the contact list or in the chat window.</li>
+	<li>Choose <strong>Jabber</strong> Call from the menu.</li>
+</ol></p>
 
 <h3>Change Audio Devices</h3>
 
 <ol>
 	<li>Plug in your headset or other audio device to the appropriate USB port.</li>
-	<li>Select <strong>Jabber</strong> &gt; Preferences &gt; Audio/Video.</li>
-	<li>Select your audio device from the drop-down lists after the hardware is recognized.</li>
+	<li>Choose <strong>Jabber</strong> &gt; <strong>Preferences</strong> &gt; <strong>Audio/Video</strong>.</li>
+	<li>Choose your audio device from the drop-down lists after the hardware is recognized.</li>
 	<li>Adjust the volume for the audio device.</li>
-	<li>Close the Preferences window to apply the changes.</li>
+	<li>Close the <strong>Preferences</strong> window to apply the changes.</li>
 </ol>
 
 <h3>Create Ad-hoc Conference Call</h3>
@@ -131,110 +129,98 @@ h3 { padding-top: 20px; }
 <p>You can create an ad-hoc conference with your contacts, simply merge your calls to create a conference call.</p>
 
 <ol>
-	<li>Start a call  with your first contact.</li>
+	<li>Start a call with your first contact.</li>
 	<li>Start a second call with another contact, the first call is automatically put on hold.</li>
-	<li>Select More &gt; Merge and the two calls are merged into a conference call.</li>
+	<li>Choose <strong>More</strong> &gt; <strong>Merge</strong> and the two calls are merged into a conference call.</li>
 </ol>
 
 <h3>Forward Calls</h3>
 
-<p>You can forward calls from Cisco Jabber.</p>
-
+<p>To forward calls from Cisco Jabber:
 <ol>
-	<li>Select <strong>Jabber</strong> &gt; Preferences &gt; Calls.</li>
-	<li>Select Call Forward.</li>
-	<li>In the Forward Calls to section, select an option from the available list or add a new number.</li>
-	<li>Add a new number in the available list by selecting the + (plus) button.</li>
+	<li>Choose <strong>Jabber</strong> &gt; <strong>Preferences</strong> &gt; <strong>Calls</strong>.</li>
+	<li>Choose <strong>Call Forward</strong>.</li>
+	<li>In the Forward Calls to section, Choose an option from the available list or add a new number.</li>
+	<li>To add a new number in the available list, click the + (plus) button.</li>
 	<li>Enter a phone number, including country and area codes.</li>
-</ol>
+</ol></p>
 
 <h3>URI Dialing</h3>
 
-<p>You can use URI dialing to make calls and resolve contacts with Uniform Resource Identifiers (URI).</p>
-<p>Users that are connected to Cisco TelePresence Video Communication Server (VCS), are only accessible using their associated URI.</p>
-<p>For example, a user named Anita Perez has the following SIP URI associated with her directory number: aperez@example.com. URI dialing enables users to call Anita with her SIP URI rather than her directory number.</p>
-
-<h4>Imported Contacts from Microsoft Outlook</h4>
-
-<p>Contacts imported from Microsoft Outlook may contain SIP URIs. For releases prior to Apple OS X Maverick Version 10.9, the Mac address book may not display some characters, for example aperez@example.com can display as aperezexamplecom. However, you can still search and call using these URIs.</p>
+<p>You can use URI dialing to make calls and resolve contacts with <mark>Uniform Resource Identifiers</mark> (URI).</p>
+<p>Users connected to <mark>Cisco TelePresence Video Communication Server</mark> (VCS), are only accessible using an associated URI.</p>
 
 <h4>Setup SIP URI</h4>
 
-<p>You can create a SIP URI for the contacts in your Mac address book.</p>
+<p>To create a SIP URI for contacts in your Mac address book:</p>
  
  <ol>
-	<li>Select the user in your Mac address book and select Edit.</li>
+	<li>Choose the user in your Mac address book and click <strong>Edit</strong>.</li>
 	<li>Within the phone section of the contact card, add the SIP URI for your contact.</li>
-	<li>Select Done.</li>
+	<li>Click <strong>Done</strong>.</li>
+	<li>Repeat for additional contacts.</li>
 </ol>
 
 <h4>Dialing a Contact using a SIP URI</h4>
 
-<p>You can call a contact using their SIP URI.</p>
- 
 <ol>
-	<li>Enter the characters of the URI including the @ symbol and at least two characters after the @. For example aperez@ex. The call bricklet will display the results.</li>
-	<li>Select Call in the bricklet, to call the contact using their SIP URI.</li>
+	<li>Enter the characters of the URI including the @ symbol and at least two characters after the @. For example aaa123@ca. The call bricklet will display the results.</li>
+	<li>Choose <strong>Call</strong> in the bricklet, to call the contact using their SIP URI.</li>
 </ol>
 
 <h3>Transfer an Active Call</h3>
 
 <ol>
-	<li>Select the more menu icon and select Transfer Call.</li>
+	<li>Choose the <strong>more</strong> menu icon and click <strong>Transfer Call</strong>.</li>
 	<li>Search for the person you are transferring the call to.</li>
-	<li>Select the Transfer icon and the call is transferred.</li>
+	<li>Click the <strong>Transfer</strong> icon and the call is transferred.</li>
 </ol>
 
 <h2>Chat</h2>
 <h3>Start a Group Chat</h3>
 
 <ol>
-	<li>Select <strong>Jabber</strong> &gt; File &gt; New Group Chat.</li>
-	<li>Enter the contacts you want to invite in the People field.</li>
+	<li>Choose <strong>Jabber</strong> &gt; <strong>File</strong> &gt; <strong>New Group Chat</strong>.</li>
+	<li>Enter the contacts you want to invite in the <strong>People</strong> field.</li>
 	<li>Enter the subject for your group chat.</li>
-	<li>Select Invite.</li>
+	<li>Click <strong>Invite</strong>.</li>
 </ol>
 
 <h3>Transfer Files</h3>
 
 <ol>
-	<li>In a chat window you can select the file transfer icon.</li>
-	<li>Select the file to transfer.</li>
-	<li>Select Send.</li>
+	<li>In a chat window, click the <strong>file transfer icon</strong>.</li>
+	<li>Choose the file to transfer.</li>
+	<li>Click <strong>Send</strong>.</li>
 </ol>
 
 <h3>Set Privacy options</h3>
 
-<p>You can specify privacy options to Ctrl who can see your status and send you messages. When  you block a contact, that person cannot view your availability status or send you instant messages.</p>
- 
-<p>To review and set privacy options:</p>
-
+<p>You can specify privacy options to control who can see your status and send you messages. When you block a contact, that person cannot view your availability status or send you instant messages. To review and set privacy options:
 <ol>
-	<li>Select <strong>Jabber</strong> &gt; Preferences &gt; Privacy.</li>
-	<li>Select your privacy preferences in the Policies section.</li>
-	<li>Close the Preferences window to apply the changes.</li>
-</ol>
+	<li>Choose <strong>Jabber</strong> &gt; <strong>Preferences</strong> &gt; <strong>Privacy</strong>.</li>
+	<li>Choose your privacy preferences in the <strong>Policies</strong> section.</li>
+	<li>Close the <strong>Preferences</strong> window to apply the changes.</li>
+</ol></p>
 
 <h3>Chat Rooms</h3>
 
-<p>When you are added as a member to a chat room, you can participate in the persistent chat room and view the discussion history.</p>
- 
+<p>When you are added as a member to a chat room, you can participate in the persistent chat room and view the discussion history.
 <ol>
-	<li>Select the Chat rooms tab. All the chat rooms that you are a member of are listed.</li>
-	<li>Double-click on the room that you want to enter.</li>
+	<li>Choose the <strong>Chat rooms</strong> tab. All the chat rooms that you are a member of are listed.</li>
+	<li>Double-click title of the room that you want to enter.</li>
 	<li>View the current participant list on the right side of the chat window.</li>
 	<li>Read the discussion and enter your own chat messages. The history of the conversation is persistent. When you exit the chat room and close the client, you can return to the conversation in that room. When you return to the chat room, you can view the messages that were sent by other members while you were not logged in.</li>
-	<li>From the chat room, select Show More to view older messages.</li>
-</ol>
+	<li>From the chat room, click <strong>Show More</strong> to view older messages.</li>
+</ol></p>
 
 <h4>Search Chat Rooms</h4>
-<p>You can search for instances of keywords in your chat rooms. Only rooms that you are a member of will be searched.</p>
- 
+<p>You can search for instances of keywords in your chat rooms. Only rooms that you are a member of will be searched.
 <ol>
-	<li>Enter a search term in the Search or call field in the client.</li>
-	<li>Select Search chat room messages option in the list. A search results window is displayed.</li>
-	<li>Select Enter to go to the chat room in the list or you can refine your search using the advanced search icon.</li>
-</ol>
+	<li>Enter a search term in the client <strong>Search</strong> field.</li>
+	<li>Choose <strong>Search chat room messages</strong> option from the list. A search results window is displayed.</li>
+	<li>Click <strong>Enter</strong> select a chat room from the results, or click <strong>advanced search</strong> to refine search.</li>
+</ol></p>
 
 
 
@@ -247,18 +233,18 @@ h3 { padding-top: 20px; }
 <p>In cloud-based deployments, you cannot add a meeting site that is configured for SSO, this site must be created in the Cisco WebEx Administration Tool.</p>
 
 <ol>
-	<li>Select <strong>Jabber</strong> &gt; Preferences &gt; Meetings.<br>
+	<li>Choose <strong>Jabber</strong> &gt; Preferences &gt; Meetings.<br>
 	Note: Sites that are provisioned by your administrator cannot be edited or deleted.</li>
-	<li>Select the Meeting Site drop-down list.</li>
-	<li>Select Edit Meeting Site... from the drop-down list.</li>
-	<li>Select the plus (+) button to add a new meetings site.</li>
+	<li>Choose the Meeting Site drop-down list.</li>
+	<li>Choose Edit Meeting Site... from the drop-down list.</li>
+	<li>Choose the plus (+) button to add a new meetings site.</li>
 	<li>Enter the required settings in the following fields:<br>
 		<ul>
 			<li><strong>Site URL:</strong> The name of the Cisco WebEx site, <code>cwru.webex.com</code></li>
 			<li><strong>Username:</strong> Your Case ID, <code>aaa123</code></li>
 			<li><strong>Password:</strong> Your network password</li>
 		</ul></li>
-	<li>Select Apply</li>
+	<li>Choose Apply</li>
 </ol>
 
 <h3>Bridge Escalations</h3>
@@ -267,10 +253,10 @@ h3 { padding-top: 20px; }
 <p>You can specify an alternative number to use for your conference calls.</p>
 
 <ol>
-	<li>Select System Preferences. The preferences window opens.</li>
-	<li>Select the Calls tab.</li>
-	<li>Select the General tab.</li>
-	<li>Select Use my number for conference calls option.</li>
+	<li>Choose System Preferences. The preferences window opens.</li>
+	<li>Choose the Calls tab.</li>
+	<li>Choose the General tab.</li>
+	<li>Choose Use my number for conference calls option.</li>
 	<li>Enter the number or the URI for your bridge. If your administrator has added a bridge pattern you won't be able to edit this field.</li>
 	<li>(Optional) Enter a Host PIN.</li> 
 	<li>(Optional) Enter a Guest PIN.</li>
@@ -278,12 +264,12 @@ h3 { padding-top: 20px; }
 
 <h4>Create Conference Call Using My Bridge</h4>
 
-<p>In the group chat window, select the call icon to start a conference call. You are connected into your bridge and your participants are sent an invitation to join your conference call.</p> -->
+<p>In the group chat window, Choose the call icon to start a conference call. You are connected into your bridge and your participants are sent an invitation to join your conference call.</p> -->
 
 <!-- <h2>Accessibility</h2>
 
 <h3>Grayscale Status Icons</h3>
-<p>To use grayscale status icons, select <strong>Jabber</strong> &gt; <strong>Preferences</strong> &gt; <strong>Status</strong> &gt; <strong>Use accessible presence icons</strong>.</p>
+<p>To use grayscale status icons, Choose <strong>Jabber</strong> &gt; <strong>Preferences</strong> &gt; <strong>Status</strong> &gt; <strong>Use accessible presence icons</strong>.</p>
 
 <h3>Keyboard Shortcuts</h3>
 
@@ -320,14 +306,14 @@ h3 { padding-top: 20px; }
 <h4>Incoming Call</h4>
 
 <dl class="dl-horizontal">
-	<dt>Answer a  Call</dt>
+	<dt>Answer a Call</dt>
 	<dd><kbd>&#8984; + L</kbd></dd>
 	<dt>Decline, Answer</dt>
 	<dd>When the Conversation window is in focus, tab or Shift + tab to move to the Decline or Answer button.</dd>
 	<dt>Answer a Call, see caller ID</dt>
 	<dd><ol>
 		<li><kbd>Ctrl + &#8984; + SPACEBAR</kbd> to open the Cisco Jabber Status Menu</li>
-		<li>DOWN ARROW to move through the menu options and select <strong>answer call from xxx-xxx-xxxx.</strong></li>
+		<li>DOWN ARROW to move through the menu options and Choose <strong>answer call from xxx-xxx-xxxx.</strong></li>
 		<li>Press ENTER.</li>
 	</ol></dd>
 </dl>
@@ -335,9 +321,9 @@ h3 { padding-top: 20px; }
 <h4>Instant Messages</h4>
 
 <dl class="dl-horizontal">
-	<dt>Start a chat with the selected contact</dt>
+	<dt>Start a chat with the Chooseed contact</dt>
 	<dd><kbd>&#8984; + N</kbd></dd>
-	<dt>Start a group chat with multiple selected contacts</dt>
+	<dt>Start a group chat with multiple Chooseed contacts</dt>
 	<dd><kbd>&#8997; + Shift + &#8984; + N</kbd></dd>
 	<dt>Close chat: <kbd>&#8984; + W</kbd></dt>
 	<dt>Exit the messaging text entry field</dt>
@@ -349,17 +335,17 @@ h3 { padding-top: 20px; }
 	<dt>Bold</dt>
 	<dd><kbd>&#8984; + B</kbd></dd>
 	<dt>Italic</dt>
-	<dd><kbd>&#8997; + &#8984;  + I</kbd></dd>
+	<dd><kbd>&#8997; + &#8984; + I</kbd></dd>
 	<dt>Underline</dt>
 	<dd><kbd>&#8984; + U</kbd></dd>
 	<dt>Bigger</dt>
-	<dd><kbd>&#8984;  +  + (plus)</kbd></dd>
+	<dd><kbd>&#8984; + + (plus)</kbd></dd>
 	<dt>Smaller</dt>
 	<dd><kbd>&#8984; + - (minus)</kbd></dd>
 	<dt>Show Colors</dt>
 	<dd><kbd>Shift + &#8984; + C</kbd></dd>
 	<dt>Copy Style</dt>
-	<dd><kbd>&#8997; + Shift +  &#8984; + C</kbd></dd>
+	<dd><kbd>&#8997; + Shift + &#8984; + C</kbd></dd>
 	<dt>Paste Style</dt>
 	<dd><kbd>&#8997; + &#8984; + V</kbd></dd>
 </dl>
@@ -369,14 +355,14 @@ h3 { padding-top: 20px; }
 <p>Global keyboard shortcuts when the <span>Cisco Jabber</span> window is in the background.</p>
 
 <dl class="dl-horizontal">
-	<dt>Answer a  Call</dt>
-	<dd><kbd>Ctrl  + &#8984; + L</kbd></dd>
-	<dt>Dial selected text in an application</dt>
-	<dd><kbd>Shift + &#8984; + 0 (zero)</kbd> or <br>&#8984;  + )</kbd></dd>
+	<dt>Answer a Call</dt>
+	<dd><kbd>Ctrl + &#8984; + L</kbd></dd>
+	<dt>Dial Chooseed text in an application</dt>
+	<dd><kbd>Shift + &#8984; + 0 (zero)</kbd> or <br>&#8984; + )</kbd></dd>
 	<dt>Answer a Call and see the caller ID</dt>
 		<dd><ol>
 			<li><kbd>Ctrl + &#8984; + SPACEBAR</kbd> to open the Cisco Jabber</span> Status Menu</li>
-			<li>DOWN ARROW to move through the menu options and select <strong>answer call from xxx-xxx-xxxx.</strong></li>
+			<li>DOWN ARROW to move through the menu options and Choose <strong>answer call from xxx-xxx-xxxx.</strong></li>
 			<li>Press ENTER.</li>
 		</ol></dd>
 </dl>
@@ -401,7 +387,7 @@ h3 { padding-top: 20px; }
 	<dd><kbd>Shift + &#8984; + N</kbd></dd>
 	<dt>Redial</dt>
 	<dd><kbd>&#8984; + R</kbd></dd>
-	<dt>Place a call to the selected contact in the contact list</dt>
+	<dt>Place a call to the Chooseed contact in the contact list</dt>
 	<dd><kbd>&#8997; + &#8984; + C</kbd></dd>
 </dl>
 
