qrg for jabber mac

--- a/guides/webex-jabber/jabber-qrg-mac.html
+++ b/guides/webex-jabber/jabber-qrg-mac.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <title>Cisco WebEx - Meeting Center Quick Reference Guide</title>
+ <title>Cisco Jabber - Mac Quick Reference Guide</title>
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 
@@ -12,7 +12,7 @@
 h2 { padding-top: 30px; }
 h3 { padding-top: 20px; }
 
-.copy-left {
+/*.copy-left {
   display: inline-block;
   text-align: right;
   margin: 0;
@@ -44,7 +44,7 @@ h3 { padding-top: 20px; }
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
-}
+}*/
 
 </style>
 
@@ -56,46 +56,9 @@ h3 { padding-top: 20px; }
 <div class="container">
 <p>&nbsp;</p>
 
-<div class="jumbotron">INFO ON INSTALL, SYS REQS HERE</div>
+<div class="jumbotron"><h1>Cisco Jabber <small>Mac Quick Reference Guide</small></h1>
+<p>INFO ON INSTALL, SYS REQS HERE</p></div>
 
-
-<h2>Availability</h2>
-<p>Customize personal status messages and tell your contacts what you are doing at a glance.</p>
-
-<ol>
-	<li>Choose the status message field on the main window.</li>
-	<li>Choose either;
-		<ul>
-			<li>Custom Available</li>
-			<li>Custom Away</li>
-			<li>Custom Do Not Disturb</li>
-			<li>Edit Status Message</li>
-		</ul></li>
-	<li>Enter a message to display.</li>
-	<li>Press the <strong>Return</strong> key on your keyboard.</li>
-	<li>Cisco Jabber displays your personal status message.</li>
-</ol>
-
- 
-<h2>Contacts</h2>
-<h3>Dial from your address book (Mac)</h3>
-
-<p>To dial contacts using Cisco Jabber directly from your Mac Address Book, first configure the <strong>Mac Address Book Plug-in</strong>.</p>
-
-<ol> 
-	<li>Choose <strong>Jabber</strong> &gt; <strong>Install Mac Address Book Plug-in</strong>.</li>
-	<li>Choose <strong>Jabber</strong> &gt; <strong>Preferences</strong> &gt; <strong>General</strong> &gt; <strong>Enable Mac Address Book integration</strong>.</li>
-	<li>Restart the client and the change will take effect.</li>
-</ol>
-
-<h3>Add Directory Groups into your contact list</h3>
-<p>To add a directory group into your contact list:</p>
-
-<ol>
-	<li>Choose <strong>Jabber</strong> &gt; Contacts &gt; New Directory Group.</li>
-	<li>Enter the name of the directory group.</li>
-	<li>Choose <strong>OK</strong>.</li>
-</ol>
 
 <h2>Make Calls</h2>
 
@@ -175,6 +138,45 @@ h3 { padding-top: 20px; }
 	<li>Search for the person you are transferring the call to.</li>
 	<li>Click the <strong>Transfer</strong> icon and the call is transferred.</li>
 </ol>
+
+ 
+<h2>Contacts</h2>
+<h3>Dial from your address book (Mac)</h3>
+
+<p>To dial contacts using Cisco Jabber directly from your Mac Address Book, first configure the <strong>Mac Address Book Plug-in</strong>.</p>
+
+<ol> 
+	<li>Choose <strong>Jabber</strong> &gt; <strong>Install Mac Address Book Plug-in</strong>.</li>
+	<li>Choose <strong>Jabber</strong> &gt; <strong>Preferences</strong> &gt; <strong>General</strong> &gt; <strong>Enable Mac Address Book integration</strong>.</li>
+	<li>Restart the client and the change will take effect.</li>
+</ol>
+
+<h3>Add Directory Groups into your contact list</h3>
+<p>To add a directory group into your contact list:</p>
+
+<ol>
+	<li>Choose <strong>Jabber</strong> &gt; Contacts &gt; New Directory Group.</li>
+	<li>Enter the name of the directory group.</li>
+	<li>Choose <strong>OK</strong>.</li>
+</ol>
+
+<h2>Availability</h2>
+<p>Customize personal status messages and tell your contacts what you are doing at a glance.</p>
+
+<ol>
+	<li>Choose the status message field on the main window.</li>
+	<li>Choose either;
+		<ul>
+			<li>Custom Available</li>
+			<li>Custom Away</li>
+			<li>Custom Do Not Disturb</li>
+			<li>Edit Status Message</li>
+		</ul></li>
+	<li>Enter a message to display.</li>
+	<li>Press the <strong>Return</strong> key on your keyboard.</li>
+	<li>Cisco Jabber displays your personal status message.</li>
+</ol>
+
 
 <h2>Chat</h2>
 <h3>Start a Group Chat</h3>
