small changes to merge

--- a/guides/webex-jabber/jabber-qrg-mac.html
+++ b/guides/webex-jabber/jabber-qrg-mac.html
@@ -56,7 +56,8 @@ h3 { padding-top: 20px; }
 <div class="container">
 <p>&nbsp;</p>
 
-<div class="jumbotron"><h1>Cisco Jabber <small>Mac Quick Reference Guide</small></h1>
+<div class="jumbotron"><h1>Cisco Jabber <br>
+<small>Mac Quick Reference Guide</small></h1>
 <p>INFO ON INSTALL, SYS REQS HERE</p></div>
 
 
