--- a/guides/webex-jabber/jabber-qrg-mac.html
+++ b/guides/webex-jabber/jabber-qrg-mac.html
@@ -57,7 +57,7 @@ h3 { padding-top: 20px; }
 <p>&nbsp;</p>
 
 <div class="jumbotron"><h1>Cisco Jabber <br>
-<small>Mac Quick Reference Guide</small></h1>
+<small>Quick Reference Guide</small></h1>
 <p>INFO ON INSTALL, SYS REQS HERE</p></div>
 
 
